# Egg

./: .gitignore  Cargo.toml
EggForSQL/: Cargo.toml
EggTest/: Cargo.toml
EggTest/src/: main.rs
egg_for_alg/: Cargo.toml
egg_for_alg/src/: optimizer.rs
egg_for_cypher/: Cargo.toml
egg_for_math/: Cargo.toml
egg_for_math/src/: analysis.rs  expr.rs  lib.rs  optimizer.rs  rules.rs
egg_test/: Cargo.toml
egg_test/src/: main.rs  tutorial_expalanation.rs  tutorial_gettingstarted.rs
math_official/: Cargo.toml
math_official/src/: lib.rs
trans_expr/: Cargo.toml
trans_expr/src/: lib.rs
